# SuperFGD_unpacking

./: .gitignore  CMakeLists.txt  README.md
calibration_results/: calib_with_DAC.txt  gain_res.root
calibration_results/2582/: sfgd_00002582_0000.txt
calibration_results/4795/: gain_res.root  sfgd_00004795_0000.txt
calibration_results/hg48/: calib_without_DAC.txt  crate_0.txt  crate_1.txt  crate_10.txt  crate_11.txt  crate_12.txt  crate_13.txt  crate_14.txt  crate_15.txt  crate_2.txt  crate_3.txt  crate_4.txt  crate_5.txt  crate_6.txt  crate_7.txt  crate_8.txt  crate_9.txt  gain_res.root
commissioning/: BaseLine.cpp  BaseLine.h  BaseLineThresholdXmlOutput.cpp  BaseLineThresholdXmlOutput.h  BoardData.h  CMakeLists.txt  EventDisplay.cpp  EventDisplay.h  PrintCrates.cpp  PrintCrates.h  ThesholdXmlOutput.h  ThresholdXmlOutput.cpp  ThresholdXmlOutput.h  Track.cpp  Track.h  XmlReaderWriter.cpp  XmlReaderWriter.h  XmlWriter.cpp  XmlWriter.h  todo.txt
connection_map/: SFG_Geometry_Map_v11.csv  connectionMap.txt  connectionMap_v11.txt  converter.sh  crateSlotAsic_missingChs.txt  map.txt
container_kekcc/: README.md  build.sh  configure  configure.ac  run.sh  unpacker_container.def.in
examples/: CMakeLists.txt  SFGDAttenuationLength.cpp  SFGDAttenuationLengthEventStructure.cpp  SFGDAttenuationLengthVertical.cpp  SFGDBaseLine.cpp  SFGDCableLengthCalibration.cpp  SFGDCalibration.cpp  SFGDDataCheck.cpp  SFGDDataDump.cpp  SFGDEventDisplay.cpp  SFGDEventStructure.cpp  SFGDFiberCalibration.cpp  SFGDFiberParameters.cpp  SFGDFitHistogram.cpp  SFGDHG_LG_ToT_calibration.cpp  SFGDReadStructure.cpp  SFGDReadXml.cpp  SFGDSandMuons.cpp  SFGDThresholdReading.cpp  SFGDThresholdStudy.cpp  SFGDTimeFebChannel.cpp  SFGDTimeResolutionStudy.cpp  SFGDTimeThresholdStudy.cpp  SFGDTimeThresholdStudyCalibration.cpp  SFGDTimeWalkCalibration.cpp  SFGDTimingCalibration.cpp  SFGDUnpack.cpp  SFGD_Gain_Reader.cpp  babyMindDataDump.cpp  babyMindUnpack.cpp  thresholdStudy.cpp  ufe_monitor.cpp
hg_lg_calibration_results/hg40_lg56/: sfgd_00005026_0000_HG_LG_all_files_crate_0.txt  sfgd_00005026_0000_HG_LG_all_files_crate_1.txt  sfgd_00005026_0000_HG_LG_all_files_crate_10.txt  sfgd_00005026_0000_HG_LG_all_files_crate_11.txt  sfgd_00005026_0000_HG_LG_all_files_crate_12.txt  sfgd_00005026_0000_HG_LG_all_files_crate_13.txt  sfgd_00005026_0000_HG_LG_all_files_crate_14.txt  sfgd_00005026_0000_HG_LG_all_files_crate_15.txt  sfgd_00005026_0000_HG_LG_all_files_crate_2.txt  sfgd_00005026_0000_HG_LG_all_files_crate_3.txt  sfgd_00005026_0000_HG_LG_all_files_crate_4.txt  sfgd_00005026_0000_HG_LG_all_files_crate_5.txt  sfgd_00005026_0000_HG_LG_all_files_crate_6.txt  sfgd_00005026_0000_HG_LG_all_files_crate_7.txt  sfgd_00005026_0000_HG_LG_all_files_crate_8.txt  sfgd_00005026_0000_HG_LG_all_files_crate_9.txt
hitStructure/: CMakeLists.txt  Hit.h  LinkDef.h
lib/: SFGDoaEventDummyDict.cxx  libSFGDoaEventDummyDict.rootmap  libSFGDoaEventDummyDict_rdict.pcm
macros/: plot_3D_from_2D.C  plot_crates.C  plot_events.C  plot_offline.sh
oaEventDummy/: CMakeLists.txt  LinkDef.h  TDigitDummy.cpp  TDigitDummy.h  TSFGDDigit.cxx  TSFGDigit.hxx  ToaEventDummy.cpp  ToaEventDummy.h
src/: BaseLine.cpp  BaseLine.h  CMakeLists.txt  Calibration.cpp  Calibration.h  Connection_Map.cpp  Connection_Map.h  CrateSlotAsic_missingChs.cpp  CrateSlotAsic_missingChs.h  Files_Reader.cpp  Files_Reader.h  MDargumentHandler.cpp  MDargumentHandler.h  MDdataContainer.h  MDdataFile.cpp  MDdataFile.h  MDdataWord.h  MDdataWordBM.cpp  MDdataWordBM.h  MDdataWordSFGD.cpp  MDdataWordSFGD.h  MDexception.cpp  MDexception.h  MDfragmentSFGD.cpp  MDfragmentSFGD.h  MDpartEventBM.cpp  MDpartEventBM.h  MDpartEventSFGD.cpp  MDpartEventSFGD.h  OutputHandler.cpp  OutputHandler.h  Peaks.cpp  Peaks.h  Pthread_Unpacking.cpp  Pthread_Unpacking.h  Reader.cpp  Reader.h  SFGD_defines.h  ThresholdStudy.cpp  ThresholdStudy.h
timing_calibration/: febChannelCalibration.txt
